--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "private": true,
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
-        "axios": "1.7.8",
+        "axios": "^1.7.8",
         "dayjs": "1.11.13",
         "jwt-decode": "^4.0.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-hook-form": "7.53.2",
+        "react-icons": "^5.5.0",
         "react-input-mask": "2.0.4",
         "react-modal": "3.16.1",
         "react-router-dom": "7.0.1",
@@ -17,6 +18,8 @@
         "yup": "1.4.0"
     },
     "devDependencies": {
+        "@types/jwt-decode": "^2.2.1",
+        "@types/node": "^24.3.1",
         "@types/react": "^18.3.1",
         "@types/react-dom": "^18.3.1",
         "@types/react-input-mask": "^3.0.5",
